# newlib1.16

./: .gitignore  README.md  config.sub  configure  configure.ac
libgloss/: configure  configure.in
newlib/: configure.host  configure.in
newlib/libc/include/machine/: ieeefp.h  setjmp.h
newlib/libc/include/sys/: config.h  reent.h
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/m6809/: Makefile.am  Makefile.in  configure  configure.ac  configure.in  memcpy.S  memset.S  setjmp.S
newlib/libc/machine/m6809/include/machine/: regs.h
newlib/libc/stdlib/: ldtoa.c  mallocr.c  mlock.c  rand.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/coco/: Makefile.in
newlib/libc/sys/m6809sim/: Makefile.am  Makefile.in  configure  configure.in
